--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   dio: ^5.1.2
+  custom_navigation_bar: ^0.8.2
+  flex_color_scheme: ^7.1.2
 
 dev_dependencies:
   flutter_test:
