--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  dio: ^5.1.2
+  hive: ^2.2.3
+  custom_navigation_bar: ^0.8.2
+  flex_color_scheme: ^7.1.2
+  flutter_login: ^4.1.1
+  email_validator: ^2.1.17
+  get: ^4.6.5
+  google_fonts: ^3.0.1
+  hexcolor: ^3.0.1
 
 dev_dependencies:
   flutter_test:
@@ -59,7 +68,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - lib/images/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
