--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   hexcolor: ^3.0.1
   pinput: ^2.2.31
   m_toast: ^0.2.0
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
