--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   pinput: ^2.2.31
   m_toast: ^0.2.0
   hive_flutter: ^1.1.0
+  flutter_dotenv: ^5.0.2
 
 dev_dependencies:
   flutter_test:
@@ -43,6 +44,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib/images/
+    - .env
+    
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
