--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   m_toast: ^0.2.0
   hive_flutter: ^1.1.0
   flutter_dotenv: ^5.0.2
+  backdrop_modal_route: ^2.0.2
+  transition: ^2.0.2
 
 dev_dependencies:
   flutter_test:
