--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ flutter:
   assets:
     - lib/images/
     - .env
+    - .env.production
     
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
