--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_dotenv: ^5.0.2
   backdrop_modal_route: ^2.0.2
   transition: ^2.0.2
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
