--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   transition: ^2.0.2
   intl: ^0.18.1
   pull_to_refresh: ^2.0.0
+  flutter_custom_dialog: ^1.2.0
+  chatview: ^1.2.1
 
 dev_dependencies:
   flutter_test:
