--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   pull_to_refresh: ^2.0.0
   flutter_custom_dialog: ^1.2.0
   chatview: ^1.2.1
+  url_launcher: ^6.1.11
 
 dev_dependencies:
   flutter_test:
