--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_custom_dialog: ^1.2.0
   chatview: ^1.2.1
   url_launcher: ^6.1.11
+  stomp_dart_client: ^0.4.4
 
 dev_dependencies:
   flutter_test:
