--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   chatview: ^1.2.1
   url_launcher: ^6.1.11
   stomp_dart_client: ^0.4.4
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
